src/test/deca/context/invalid/custom/object/decl_class_extends_static.deca
class Vehicle {
    protected int wheels;

    void Vehicle(int wheels) {
        this.wheels = wheels;
    }

    void setWheels(int newWheels) {
        this.wheels = newWheels;
    }

    int getWheels() {
        return this.wheels;
    }
}

class Car extends Vehicle {
    protected int maxSpeed;
    float height;

    void Car(int maxSpeed, float height) {
        this.maxSpeed = maxSpeed;
        this.height = height;
    }

    void setMaxSpeed(int newSpeed) {
        maxSpeed = newSpeed;
    }

    int getMaxSpeed() {
        return maxSpeed;
    }

    float calculateFuel() {
        return (maxSpeed * height) / 10;
    }

    float distanceMax() {
        return this.calculateFuel() * height;
    }
}

{
    Car car1 = new Vehicle();
    Vehicle vehicle1 = new Car();

    car1.Car(200, 2.4);
    vehicle1.Vehicle(4);
}